--- a/about.html
+++ b/about.html
@@ -19,6 +19,7 @@
             <p> - Pronouns: He/Him</p>
             <p> - Location: US/Oklahoma</p>
             <p> - Hobbies: Gaming, <a href="https://github.com/Mackery6969">Coding</a>, Drawing, and Music</p>
+            <p> - Mental: Blind
         </section>
         <audio id="bg-music" src="assets/music/cryptoMan.mp3" autoplay loop></audio>
         <script src="js/musicControl.js"></script>
