--- a/links.html
+++ b/links.html
@@ -42,7 +42,7 @@
                 <p><a href="https://www.youtube.com/channel/UCoHPdYvSc-dNe5QaHd5800Q" class="link">Whynotboi/JJ Maiden</a></p>
                 <p><a href="https://www.youtube.com/@ThatSmilingTophat" class="link">Zaurzo/ThatSmilingTopHat</a></p>
                 <p><a href="https://www.youtube.com/@MTHD2022" class="link">MTHD</a></p>
-                <p><a href="https://www.youtube.com/@seezee_" class="link">SeeZee</a></p>
+                <p><a href="https://www.youtube.com/@seezee_" class="link">SeeZee</a> (despite him saying im not his friend)</p>
                 <p><a href="https://heroeyad.github.io" class="link">HeroEyad</a></p>
                 <p><a href="https://www.youtube.com/@Brax10" class="link">Brax10Gaming</a> (my cousin)</p>
                 <p><a href="https://www.youtube.com/@parakeeter5370" class="link">Parakeeter</a> (maker of my snow golem pfp)</p>
