--- a/about.html
+++ b/about.html
@@ -19,7 +19,9 @@
             <p> - Pronouns: He/Him</p>
             <p> - Location: US/Oklahoma</p>
             <p> - Hobbies: Gaming, <a href="https://github.com/Mackery6969">Coding</a>, Drawing, and Music</p>
-            <p> - Mental: Blind
+            <p> - Mental: Blind, Anxiety, Depression, and ADHD</p>
+            <p> - Randomness: AAAAAAAAAAAAAA</p>
+            <p> - Status: but just OK...</p>
         </section>
         <audio id="bg-music" src="assets/music/cryptoMan.mp3" autoplay loop></audio>
         <script src="js/musicControl.js"></script>
