--- a/links.html
+++ b/links.html
@@ -72,6 +72,7 @@
                 <p>Leather128</p>
                 <p>Dew2u</p>
                 <p>HollowReborn</p>
+                <p>NOT Snowy >:P</p>
             </div>
         </section>
         <audio id="bg-music" src="assets/music/cryptoMan.mp3" autoplay loop></audio>
